# PyDFuzz

./: .gitignore  README.md  pyproject.toml
docs/: contribute.md  prerequisite.md
src/pydfuzz/: cli.py  crash_handler.py  debugger.py  fuzz_executor.py  fuzzing_manager.py  gui.py  logger.py
src/pydfuzz/pdf_generator/: base_generator.py  corrupt_font.py  corrupt_javascript.py  corrupt_stream.py  corrupt_xref.py
tests/: run_tests.py  test_afl_fuzzer.py  test_corrupt_font.py  test_corrupt_javascript.py  test_corrupt_stream.py  test_corrupt_xref.py
