[project]
name = "pydfuzz"
version = "0.2.0"
description = ""
authors = [{ name = "Krishna Kumar D", email = "dkrishnakumar987@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["loguru (>=0.7.3,<0.8.0)", "pdfrw (>=0.4,<0.5)", "customtkinter (>=5.2.2,<6.0.0)", "pillow (>=11.1.0,<12.0.0)", "psutil (>=7.0.0,<8.0.0)"]

[tool.poetry]
packages = [{ include = "pydfuzz", from = "src" }]

[tool.poetry.scripts]
runtests = "tests.run_tests:main"
pydfuzz-cli = "pydfuzz.cli:main"
pydfuzz-gui = "pydfuzz.gui:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
